// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`typed material api client integration batch creates materials and snapshots get responses 1`] = `
{
  "id": "<db-id>",
  "pressureE": {
    "unit": "Pascal",
    "value": 125000,
  },
  "pressureG": {
    "unit": "Pascal",
    "value": 85000,
  },
  "revisionId": "<revision-id>",
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 2`] = `
{
  "id": "<db-id>",
  "pressureE": {
    "unit": "Pascal",
    "value": 101324.66370467292,
  },
  "pressureG": {
    "unit": "Pascal",
    "value": 101325,
  },
  "revisionId": "<revision-id>",
}
`;

exports[`typed material api client integration batch creates materials and snapshots get responses 3`] = `
{
  "id": "<db-id>",
  "pressureE": {
    "unit": "Pascal",
    "value": 96258.75,
  },
  "pressureG": {
    "unit": "Pascal",
    "value": 95000,
  },
  "revisionId": "<revision-id>",
}
`;
